--- a/src/R/pcgrr/inst/templates/predispose/gwas_predispose.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/gwas_predispose.Rmd
@@ -7,17 +7,17 @@
 
 show_gwas_filters <- F
 missing_gwas_items <- T
-if(NROW(pcg_report[['snv_indel']][['variant_display']][['gwas']]) > 0){
+if(NROW(cps_report[['snv_indel']][['variant_display']][['gwas']]) > 0){
   show_gwas_filters <- T
   missing_gwas_items <- F
 }
  
 
-tag_tgp <- pcg_report[['pcgr_config']][['popgen']][['vcftag_tgp']]
-desc_tgp <- pcg_report[['pcgr_config']][['popgen']][['popdesc_tgp']]
+tag_tgp <- cps_report[['cpsr_config']][['popgen']][['vcftag_tgp']]
+desc_tgp <- cps_report[['cpsr_config']][['popgen']][['popdesc_tgp']]
 formula_tgp <- as.formula(paste0("~",rlang::sym(tag_tgp)))
-tag_gnomad <- pcg_report[['pcgr_config']][['popgen']][['vcftag_gnomad']]
-desc_gnomad <- pcg_report[['pcgr_config']][['popgen']][['popdesc_gnomad']]
+tag_gnomad <- cps_report[['cpsr_config']][['popgen']][['vcftag_gnomad']]
+desc_gnomad <- cps_report[['cpsr_config']][['popgen']][['popdesc_gnomad']]
 formula_gnomad <- as.formula(paste0("~",rlang::sym(tag_gnomad)))
 
 
@@ -28,14 +28,14 @@ library(summarywidget)
 library(crosstalk)
 
 
-cat('A total of ',NROW(pcg_report[['snv_indel']][['variant_display']][['gwas']]), ' other germline variant(s) are associated with cancer phenotypes through genome-wide association studies (p-value < ',pcg_report[['pcgr_config']][['gwas']][['p_value_min']],'):')
+cat('A total of ',NROW(cps_report[['snv_indel']][['variant_display']][['gwas']]), ' other germline variant(s) are associated with cancer phenotypes through genome-wide association studies (p-value < ',cps_report[['cpsr_config']][['gwas']][['p_value_min']],'):')
 cat('\n')
 htmltools::br()
 htmltools::br()
 
-#col <- pcgr_config$custom_tags$custom_tags
+#col <- cpsr_config$custom_tags$custom_tags
 #as.formula(paste0("~",rlang::sym(col)))
-variants_gwas_cancer <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['gwas']])
+variants_gwas_cancer <- crosstalk::SharedData$new(cps_report[['snv_indel']][['variant_display']][['gwas']])
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_gwas_cancer, ~CONSEQUENCE),
@@ -64,7 +64,7 @@ crosstalk::bscols(
 ```
 
 ```{r gwas_cancer_missing, echo=F, results = 'asis', eval = missing_gwas_items}
-cat('<i>No variants with a p-value <',pcgr_config$gwas$p_value_min,' were found.</i>',sep='\n')
+cat('<i>No variants with a p-value <',cpsr_config$gwas$p_value_min,' were found.</i>',sep='\n')
 cat('\n')
 ```
 <br><br>
